// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple failures error messages 1`] = `
"
MultipleFailures
    FileTreeRemovalFailure
        path: container/bar.unremovable
        error:
            [RemovalError: File or directory 'container/bar.unremovable' cannot be deleted]
    FileTreeRemovalFailure
        path: container/baz.unremovable
        error:
            [RemovalError: File or directory 'container/baz.unremovable' cannot be deleted]
"
`;

exports[`multiple failures returns a result matching snapshot 1`] = `
MultipleFailures {
  "code": 2,
  "error": Array [
    FileTreeRemovalFailure {
      "code": 7,
      "error": [RemovalError: File or directory 'container/bar.unremovable' cannot be deleted],
      "path": "container/bar.unremovable",
      "value": undefined,
    },
    FileTreeRemovalFailure {
      "code": 7,
      "error": [RemovalError: File or directory 'container/baz.unremovable' cannot be deleted],
      "path": "container/baz.unremovable",
      "value": undefined,
    },
  ],
  "value": undefined,
}
`;

exports[`one failure error messages 1`] = `
"
FileTreeRemovalFailure
    path: container/bar.unremovable
    error:
        [RemovalError: File or directory 'container/bar.unremovable' cannot be deleted]
"
`;

exports[`one failure returns a result matching snapshot 1`] = `
FileTreeRemovalFailure {
  "code": 7,
  "error": [RemovalError: File or directory 'container/bar.unremovable' cannot be deleted],
  "path": "container/bar.unremovable",
  "value": undefined,
}
`;
